<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/divideButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:background="#FF9800"
        android:textColor="#FFFFFF"
        android:text="@string/divideButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/multiplyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nineButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/oneButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="#000000"
        android:text="@string/oneButton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/twoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourButton" />

    <Button
        android:id="@+id/aButton"
        android:layout_width="75dp"
        android:layout_height="49dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="@string/aButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/sixButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="#000000"
        android:text="@string/sixButton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/threeButton"
        app:layout_constraintEnd_toStartOf="@+id/multiplyButton"
        app:layout_constraintStart_toEndOf="@+id/fiveButton"
        app:layout_constraintTop_toBottomOf="@+id/nineButton" />

    <Button
        android:id="@+id/fiveButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="#000000"
        android:text="@string/fiveButton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/twoButton"
        app:layout_constraintEnd_toStartOf="@+id/sixButton"
        app:layout_constraintStart_toEndOf="@+id/fourButton"
        app:layout_constraintTop_toBottomOf="@+id/eightButton" />

    <Button
        android:id="@+id/threeButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="#000000"
        android:text="@string/threeButton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintStart_toEndOf="@+id/twoButton"
        app:layout_constraintTop_toBottomOf="@+id/sixButton" />

    <Button
        android:id="@+id/zeroButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="#000000"
        android:text="@string/zeroButton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twoButton" />

    <Button
        android:id="@+id/twoButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="#000000"
        android:text="@string/twoButton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintEnd_toStartOf="@+id/threeButton"
        app:layout_constraintStart_toEndOf="@+id/oneButton"
        app:layout_constraintTop_toBottomOf="@+id/fiveButton" />

    <Button
        android:id="@+id/fourButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="#000000"
        android:text="@string/fourButton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/oneButton"
        app:layout_constraintEnd_toStartOf="@+id/fiveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sevenButton" />

    <Button
        android:id="@+id/eightButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="250dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="@string/eightButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/fiveButton"
        app:layout_constraintEnd_toStartOf="@+id/nineButton"
        app:layout_constraintStart_toEndOf="@+id/sevenButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nineButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="250dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="@string/nineButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sixButton"
        app:layout_constraintEnd_toStartOf="@+id/divideButton"
        app:layout_constraintStart_toEndOf="@+id/eightButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:background="#FF9800"
        android:text="@string/plusButton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/equalsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minusButton" />

    <Button
        android:id="@+id/equalsButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="5dp"
        android:background="#FF9800"
        android:text="@string/equalsButton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plusButton" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="#FF9800"
        android:text="@string/minusButton"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/plusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/threeButton"
        app:layout_constraintTop_toBottomOf="@+id/multiplyButton" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="#FF9800"
        android:text="@string/multiplyButton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/minusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sixButton"
        app:layout_constraintTop_toBottomOf="@+id/divideButton" />

    <Button
        android:id="@+id/sevenButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="250dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="@string/sevenButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/fourButton"
        app:layout_constraintEnd_toStartOf="@+id/eightButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/answerText"
        android:layout_width="339dp"
        android:layout_height="43dp"
        android:background="#ADBD96"
        android:text="@string/answerText"
        android:textColor="#000000"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <TextView
        android:id="@+id/inputText"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:background="#ADBD96"
        android:text="@string/inputText"
        android:textColor="#000000"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="36sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />

    <Spinner
        android:id="@+id/inputBases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <Spinner
        android:id="@+id/outputBases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <Button
        android:id="@+id/eButton"
        android:layout_width="75dp"
        android:layout_height="49dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="@string/eButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <Button
        android:id="@+id/bButton"
        android:layout_width="75dp"
        android:layout_height="49dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="@string/bButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/dButton"
        android:layout_width="75dp"
        android:layout_height="49dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="@string/dButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <Button
        android:id="@+id/fButton"
        android:layout_width="75dp"
        android:layout_height="49dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="@string/fButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="75dp"
        android:layout_height="49dp"
        android:layout_marginEnd="1dp"
        android:background="#2196F3"
        android:text="@string/clearButton"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <Button
        android:id="@+id/cButton"
        android:layout_width="75dp"
        android:layout_height="49dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="@string/cButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>